# CMakeTemplate

./: .gitignore  README.md
Template/v1/[SOLUTION_NAME]/: CMakeLists.txt
Template/v1/[SOLUTION_NAME]/__COMMON__/[PROJECT_NAME]/: CMakeLists.txt
Template/v1/[SOLUTION_NAME]/__NATIVE__/__INCLUDE__/: Manual.txt
Template/v1/[SOLUTION_NAME]/__NATIVE__/__LINUX__/: Manual.txt
Template/v2/: CMakeLists.txt
Template/v2/__TEMPLATE__/: Desc.txt
Template/v2/__TEMPLATE__/[NATIVE_DIR_NAME]/: Desc.txt
Template/v2/__TEMPLATE__/[NATIVE_DIR_NAME]/__LIBS__/: Desc.txt
Template/v2/__TEMPLATE__/[PROJECT_NAME]/: CMakeLists.txt  Desc.txt
Template/v2/__TEMPLATE__/[SOLUTION_NAME]/__COMMON__/: Desc.txt
Template/v2/__TEMPLATE__/[SOLUTION_NAME]/__INCLUDE__/: Desc.txt
Template/v2/__TEMPLATE__/[SOLUTION_NAME]/__NATIVE__/: Desc.txt
